# rydor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
shaders/: default.frag  default.vert
src/: defines.h  main.cpp  rydor_app.cpp  rydor_app.h  utils.cpp  utils.h
src/log/: log.cpp  log.h
